# good-morning

./: .gitignore  Cargo.toml  LICENSE  README.md  launch.ps1  launch.sh
src/: common.rs  main.rs  notify.rs  rss.rs  syndication.rs
src/lib/: atom.rs  common.rs  data.rs  import.rs  mod.rs  notify.rs  rss.rs  sendgrid.rs  syndication.rs
src/notify/: sendgrid.rs
src/syndication/: atom.rs  rss.rs
