[package]
name = "good-morning"
version = "0.1.0"
authors = ["rom"]
edition = "2018"

[dependencies]
quick-xml = "0.13.1"
reqwest = "0.9.5"
structopt = "0.2.10"
log = "0.4.6"
simple_logger = "1.0.1"
chrono = "0.4.6"
crossbeam = "0.7.1"
failure = "0.1.5"
serde = "1.0.89"
serde_derive = "1.0.89"
toml = "0.5"

[dependencies.rusqlite]
version = "0.16.0"
features = ["bundled"]